--- a/project.ipynb
+++ b/project.ipynb
@@ -48,14 +48,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import altair as alt\n",
+    "import matplotlib as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "pd.read_csv('data/sleep_health_lifestyle_dataset.csv')"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "shl_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
